--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: 生如夏花
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: a blog
 
 # --- Navigation bar options --- #
 
