--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: a blog
 
 # List of links in the navigation bar
 navbar-links:
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+ # Resources:
+   # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+ #   - Learn markdown: "http://www.markdowntutorial.com/"
+   # - GitHub Pages: "https://pages.github.com/"
   About Me: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
