--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author:
   name: 生如夏花
   email: "1660493233@qq.com"
   facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
+  github: believeYouself   # eg. daattali
   twitter: yourname   # eg. daattali
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
@@ -63,7 +63,7 @@ author:
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
   twitter: false
   google-plus: false
