--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ description: a blog
 
 # List of links in the navigation bar
 navbar-links:
+  技术: "categories/technology"
+  #杂谈: "categories/talk"
  # Resources:
    # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
  #   - Learn markdown: "http://www.markdowntutorial.com/"
@@ -106,16 +108,16 @@ share-links-active:
 
 # Excerpt Word Length
 # Truncates the excerpt to the specified number of words on the index page
-excerpt_length: 50
+excerpt_length: 20
 
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
 title-separator: "-"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
-
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+##设置时区，默认为系统时区
+#timezone: null
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
@@ -125,6 +127,7 @@ paginate: 6
 kramdown:
   input: GFM
 
+#在此配置中设置默认值，而不是在每次创建一个新的文章或页面重复此配置。  
 # Default YAML values (more information on Jekyll's site)
 defaults:
   -
